<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app_name1">Spotify Streamer</string>
    <string name="app_name2">Scores App</string>
    <string name="app_name3">Library App</string>
    <string name="app_name4">Build It Bigger</string>
    <string name="app_name5">XYZ Reader</string>
    <string name="app_name6">Capstone</string>
    <string name="toast_message">This button will open %1$s app!</string>

</resources>
