<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nitish.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <Button android:text="@string/app_name1" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button1" style="@style/ButtonStyle"
        android:layout_below="@id/title" android:layout_centerHorizontal="true"></Button>
    <Button android:text="@string/app_name2" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button2" style="@style/ButtonStyle"
        android:layout_below="@+id/button1" android:layout_centerHorizontal="true"></Button>
    <Button android:text="@string/app_name3" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button3" style="@style/ButtonStyle"
        android:layout_below="@+id/button2" android:layout_centerHorizontal="true"></Button>
    <Button android:text="@string/app_name4" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button4" style="@style/ButtonStyle"
        android:layout_below="@+id/button3" android:layout_centerHorizontal="true"></Button>
    <Button android:text="@string/app_name5" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button5" style="@style/ButtonStyle"
        android:layout_below="@+id/button4" android:layout_centerHorizontal="true"></Button>
    <Button android:text="@string/app_name6" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button6"
        android:background="@color/colorAccent" android:width="200dp" android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:layout_below="@+id/button5" android:layout_centerHorizontal="true"></Button>
</RelativeLayout>
